--- a/frontend/package.json
+++ b/frontend/package.json
@@ -20,6 +20,7 @@
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-router-dom": "^7.1.3",
+    "react-turnstile": "^1.1.4",
     "recharts": "^2.15.1",
     "supabase": "^2.9.6",
     "tailwindcss": "^4.0.0"
