--- a/frontend/package.json
+++ b/frontend/package.json
@@ -12,16 +12,16 @@
   "dependencies": {
     "@emotion/react": "^11.14.0",
     "@emotion/styled": "^11.14.0",
-    "@mui/material": "^6.4.7",
-    "@mui/x-charts": "^7.27.1",
+    "@marsidev/react-turnstile": "^1.1.0",
+    "@mui/material": "^7.0.1",
+    "@mui/x-charts": "^7.28.0",
     "@supabase/supabase-js": "^2.48.1",
     "@tailwindcss/vite": "^4.0.0",
     "@tanstack/react-table": "^8.21.2",
+    "lucide-react": "^0.485.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-router-dom": "^7.1.3",
-    "react-turnstile": "^1.1.4",
-    "recharts": "^2.15.1",
     "supabase": "^2.9.6",
     "tailwindcss": "^4.0.0"
   },
