--- a/frontend/package.json
+++ b/frontend/package.json
@@ -15,10 +15,10 @@
     "@marsidev/react-turnstile": "^1.1.0",
     "@mui/material": "^7.0.1",
     "@mui/x-charts": "^7.28.0",
-    "@marsidev/react-turnstile": "^1.1.0",
     "@supabase/supabase-js": "^2.48.1",
     "@tailwindcss/vite": "^4.0.0",
     "@tanstack/react-table": "^8.21.2",
+    "axios": "^1.8.4",
     "lucide-react": "^0.485.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
